--- a/frontend/tradebot/public/manifest.json
+++ b/frontend/tradebot/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "Create React App Sample",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "trade-buddy-logo1_25x25.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
